--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "server.js",
   "dependencies": {
     "axios": "^0.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
-    "mongoose": "^5.6.5"
+    "mongoose": "^5.6.5",
+    "morgan": "^1.9.1"
   },
   "devDependencies": {},
   "scripts": {
